Implement neural network animation, floating about layout, navigation updates, and config cleanup

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,8 +17,10 @@ en: &DEFAULT_EN
       section: portfolio
     - title: "About"
       section: about
-    - title: "Timeline"
+    - title: "Journey"
       section: timeline
+    - title: "Certifications"
+      section: certifications
     - title: "LinkedIn"
       url: https://www.linkedin.com/in/firnaz-ahamed
 
